# FWK2

./: MAKE.bat  README.md  hello.c  hello0.c  hello1.c  load.c  throw.c
.github/: CHANGELOG.md  CMakeLists.txt  README.md  docs.c  docs.css  docs.html  docs.md
0/: mod.lua
art/demos/: 00-null.c  01-window.c  02-opengl.c  03-imgui.c
code/: backend.cc  bin2c.c  config.h  embed.bat  engine.c  engine.h  events.h  native.c  native.h  native.hh  replace.h  sdl3.cc  todo.h
code/0-core/: sys.c  sys.h  sys_ansi.h  sys_args.h  sys_debug.h  sys_die.h  sys_flag.h  sys_folder.h  sys_glue.h  sys_macros.h  sys_sleep.h  sys_string.h  sys_test.h  sys_time.h  sys_trace.h  sys_trap.h
code/1-toolkit/: sys.h  sys_color.h  sys_dialog.h  sys_input.h  sys_ui.h  sys_window.h
code/2-game/: module.3  module.c  sys_battery.h  sys_ini.h  sys_input.h  sys_level.h  sys_math.h  sys_mouse.h  sys_time.h  sys_timer.h  sys_vfs.h
code/3rd/: 3rd.c  3rd.cc  3rd.h  3rd.hh  3rd_archive_dir.h  3rd_archive_gz.h  3rd_archive_pak.h  3rd_archive_tar.h  3rd_archive_zip.h  3rd_compress.h  3rd_compress_deflate.h  3rd_compress_zlib.h  3rd_eval.h  3rd_imFileDialog.hh  3rd_imLegitProfilerTask.h  3rd_xml.h  (+4 more)
demos/: 00-null.c  01-window.c  02-imgui.c  03-opengl.c  04-image.c  05-ddraw.c  06-fx.c  07-font.c  08-input.c  09-shadertoy.c  10-tiled.c  11-sprite.c  12-sprite3d.c  13-model.c  14-script.c  15-audio.c  16-shadows.c  17-cubemap.c  18-webcam.c  99-mesh.c  hello.lua  hello2.lua
ext/: MAKE.bat  PLUG.bat  TODO.md  ext-demos.c  ext.h  ext.hh
src/: config.h  engine.c  engine.h  engine.x.inl  legal.c  loop.c
(+468 files in other folders)
