cmake_minimum_required(VERSION 3.13...${CMAKE_VERSION})
project(hello LANGUAGES C CXX)
add_executable(hello ../hello.c ../code/engine.c ../code/native.c ../code/backend.cc)

    file(GLOB sources_list LIST_DIRECTORIES true "../ext/*/inc")
    foreach(dir ${sources_list})
        message(INC="${dir}")
        IF(IS_DIRECTORY ${dir})
            target_include_directories(hello PRIVATE ${dir})
        ELSE()
            CONTINUE()
        ENDIF()
    endforeach()

    file(GLOB sources_list LIST_DIRECTORIES true "../ext/*/x64")
    foreach(dir ${sources_list})
        message(LIB="${dir}")
        IF(IS_DIRECTORY ${dir})
            target_link_directories(hello PRIVATE ${dir})
        ELSE()
            CONTINUE()
        ENDIF()
    endforeach()

target_include_directories(hello PRIVATE "../" "../code")
target_compile_options(hello PRIVATE /MT /GL /GF /arch:AVX2)
target_compile_definitions(hello PRIVATE $<$<CONFIG:Release>:FLAGS=FLAGS_REL>)
target_link_options(hello PRIVATE)
